--- a/franklinservices/pom.xml
+++ b/franklinservices/pom.xml
@@ -7,10 +7,14 @@
   <groupId>com.franklin</groupId>
   <artifactId>franklinservices</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>franklinservices</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+  <modules>
+    <module>customersvc</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
